force-app/main/default/objects/Coaching_Opportunities__c.object
<CustomObject>
    <fields>
        <fullName>Assessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is to be used for Lookup on the assessing user</description>
        <label>Assessor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Field used for assessing linked date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enquiry_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Field used access linked enquiry</description>
        <label>Enquiry Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Coaching Opportunities</relationshipLabel>
        <relationshipName>Coaching_Opportunities11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <description>Field used store reason for the error</description>
        <label>Error Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Error_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer expectations could not be met</fullName>
                </value>
                <value>
                    <fullName>Customer was unaware/mistaken</fullName>
                </value>
                <value>
                    <fullName>Customer did not provide a reason for lower score</fullName>
                </value>
                <value>
                    <fullName>Staff provided incorrect or incomplete information</fullName>
                </value>
                <value>
                    <fullName>Staff provided incorrect or broken links</fullName>
                </value>
                <value>
                    <fullName>Staff did not check enquiry history</fullName>
                </value>
                <value>
                    <fullName>Staff failed to follow/investigate the correct process</fullName>
                </value>
                <value>
                    <fullName>Staff behaved inappropriately/was rude</fullName>
                </value>
                <value>
                    <fullName>Staff was not helpful</fullName>
                </value>
                <value>
                    <fullName>Untimely Response- not sent within SLA</fullName>
                </value>
                <value>
                    <fullName>Delayed Response - not sent within SLA due to waiting on another team/faculty</fullName>
                </value>
                <value>
                    <fullName>No response provided at all</fullName>
                </value>
                <value>
                    <fullName>Website was incorrect/ not updated/ conflicted with another website</fullName>
                </value>
                <value>
                    <fullName>Monash system/process fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_type__c</fullName>
        <description>Field used store type for the error</description>
        <label>Error type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monash failed to meet an obligation</fullName>
                </value>
                <value>
                    <fullName>Monash met all obligations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Officer_TC_Faculty_Other_Sources__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up on the User assigned to the Coaching Opportunity</description>
        <label>Officer/TC/Faculty/Other Sources</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Opportunities12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <description>Name of the Process Owner</description>
        <label>Process Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Field used store the Source</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QA Queue</fullName>
                </value>
                <value>
                    <fullName>SET BAU</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_of_error__c</fullName>
        <description>Field used store the Error Summary</description>
        <label>Summary of error</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used store the linked survey</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Coaching Opportunities</relationshipLabel>
        <relationshipName>Coaching_Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TC_TL_Final_Comments__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Field to capture comments for Coaching Opportunities</description>
        <label>TC/TL Final Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TC_TL_actions_to_be_taken__c</fullName>
        <description>Field used store actions to be done by the team lead or team co-ordinator</description>
        <label>TC/TL actions to be taken</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TC_TL_feedback_assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used store feedback actions to be done by the team lead or team co-ordinator</description>
        <label>TC/TL feedback assigned to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TC_TL_final_response__c</fullName>
        <description>Field used store actions to be done by the team lead or team co-ordinator as a final response</description>
        <label>TC/TL final response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Followed up with student</fullName>
                </value>
                <value>
                    <fullName>Provided coaching feedback</fullName>
                </value>
                <value>
                    <fullName>Followed up with student &amp; Provided coaching feedback</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Investigated - no error found</fullName>
                </value>
                <value>
                    <fullName>Unable to provide feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used store the linked team co-ordinator</description>
        <label>Team Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Opportunities10</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Coaching Opportunities</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Enquiry_Number__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Officer_TC_Faculty_Other_Sources__c</columns>
        <columns>Team_Coordinator__c</columns>
        <columns>TC_TL_actions_to_be_taken__c</columns>
        <columns>Error_Reason__c</columns>
        <columns>Error_type__c</columns>
        <columns>TC_TL_feedback_assigned_to__c</columns>
        <columns>TC_TL_final_response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Coaching Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Coaching_Opportunities</fullName>
        <columns>Enquiry_Number__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Officer_TC_Faculty_Other_Sources__c</columns>
        <columns>Team_Coordinator__c</columns>
        <columns>TC_TL_actions_to_be_taken__c</columns>
        <columns>Error_Reason__c</columns>
        <columns>Error_type__c</columns>
        <columns>TC_TL_feedback_assigned_to__c</columns>
        <columns>TC_TL_final_response__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TC_TL_final_response__c</field>
            <operation>notContain</operation>
            <value>Provided coaching feedback,Followed up with student &amp; Provided coaching feedback,Investigated - no error found</value>
        </filters>
        <label>All Open Coaching Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Coaching_Opportunities_no_FR</fullName>
        <columns>Enquiry_Number__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Officer_TC_Faculty_Other_Sources__c</columns>
        <columns>Team_Coordinator__c</columns>
        <columns>TC_TL_actions_to_be_taken__c</columns>
        <columns>Error_Reason__c</columns>
        <columns>Error_type__c</columns>
        <columns>TC_TL_feedback_assigned_to__c</columns>
        <columns>TC_TL_final_response__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TC_TL_final_response__c</field>
            <operation>notEqual</operation>
            <value>Followed up with student,Provided coaching feedback,Followed up with student &amp; Provided coaching feedback,Escalated,Investigated - no error found,Unable to provide feedback</value>
        </filters>
        <label>All Open Coaching Opportunities - no FR</label>
    </listViews>
    <nameField>
        <label>Coaching Opportunities Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coaching Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Error_Reason_Check</fullName>
        <active>true</active>
        <description>If a user is a selected in &quot;Officer TC Faculty Other Sources&quot;, then a value must be supplied in &quot;Error Reason&quot;</description>
        <errorConditionFormula>NOT(ISBLANK(Officer_TC_Faculty_Other_Sources__c)) &amp;&amp; ISPICKVAL(Error_Reason__c, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please select &apos;Error reason&apos; before proceeding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Error_Type_Check</fullName>
        <active>true</active>
        <description>If a user is a selected in &quot;Officer TC Faculty Other Sources&quot;, then a value must be supplied in &quot;Error Type&quot;</description>
        <errorConditionFormula>NOT(ISBLANK(Officer_TC_Faculty_Other_Sources__c)) &amp;&amp; ISPICKVAL(Error_type__c, &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please select &apos;Error type&apos; before proceeding</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Process_Owner_Check</fullName>
        <active>true</active>
        <description>If the Responsible User is empty &amp; Team Coordinator is empty then process Owner should have a value</description>
        <errorConditionFormula>ISBLANK(Officer_TC_Faculty_Other_Sources__c) &amp;&amp; ISBLANK(Process_Owner__c)</errorConditionFormula>
        <errorMessage>Process Owner OR Officer not selected. Please check if correct.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Coord_Check</fullName>
        <active>true</active>
        <description>If a user is a selected in &quot;Officer TC Faculty Other Sources&quot;, then a value must be supplied in &quot;Team Coordinator&quot;</description>
        <errorConditionFormula>NOT(ISBLANK(Officer_TC_Faculty_Other_Sources__c)) &amp;&amp; ISBLANK(Team_Coordinator__c)</errorConditionFormula>
        <errorMessage>Team Coordinator not selected. Please check if correct.</errorMessage>
    </validationRules>
</CustomObject>